# baro-rs

./: .env.example  .gitignore  AGENTS.md  ASYNC_TASKS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  STORAGE.md  STORAGE_IMPL.md  build.rs  wokwi.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
crates/baro-core/: Cargo.toml
crates/baro-core/src/: app_state.rs  async_i2c_bus.rs  config.rs  display_manager.rs  lib.rs  metrics.rs  sensor_store.rs
crates/baro-core/src/pages/: constants.rs  display_settings.rs  home.rs  mod.rs  monitor.rs  page.rs  page_manager.rs  settings.rs  wifi_error.rs  wifi_status.rs
crates/baro-core/src/pages/home/: grid.rs  mod.rs  outdoor.rs
crates/baro-core/src/pages/settings/: display.rs  list.rs  mod.rs
crates/baro-core/src/pages/trend/: constants.rs  mod.rs  page.rs
crates/baro-core/src/sensors/: bh1750.rs  bmp388.rs  mod.rs
crates/baro-core/src/storage/: manager.rs  sd_card.rs
crates/baro-core/src/ui/: EXAMPLES.md  core.rs  mod.rs
crates/baro-core/src/ui/components/: button.rs  text.rs
crates/baro-core/src/ui/components/graph/: grid.rs  series.rs  viewport.rs
crates/baro-core/src/ui/layouts/: mod.rs  scrollable.rs
crates/baro-core/src/ui/styling/: colors.rs  layout.rs  theme.rs
crates/baro-firmware/: Cargo.toml  build.rs
crates/baro-firmware/src/: lib.rs  wifi_secrets.rs
crates/baro-firmware/src/app_state/: hardware.rs  mod.rs  sensors_state.rs
crates/baro-simulator/: Cargo.toml
crates/baro-simulator/src/: main.rs
src/: app_state.rs  config.rs  display_manager.rs  dual_mode_pin.rs  framebuffer.rs  ft6336u.rs  lib.rs  metrics.rs  page_manager.rs  rollup_storage.rs  sampling.rs  ui_components.rs  ui_core.rs  widgets.rs
src/app_state/: hardware.rs  mod.rs  sensors_state.rs
src/pages/: home.rs  mod.rs  page.rs  page_manager.rs  settings.rs  trend.rs  wifi_error.rs
src/pages/trend/: constants.rs  data.rs  page.rs  stats.rs
src/sensors/: mod.rs  scd41.rs  sht40.rs
src/storage/: accumulator.rs  manager.rs  mod.rs  rollup.rs  rollup_storage.rs  sd_card.rs
src/ui/: EXAMPLES.md  README.md  core.rs  elements.rs  mod.rs  styling.rs
src/ui/components/: button.rs  mod.rs  text.rs
src/ui/components/graph/: axis.rs  component.rs  constants.rs  interpolation.rs  mod.rs  series.rs  viewport.rs
src/ui/layouts/: container.rs  mod.rs  scrollable.rs
src/ui/styling/: layout.rs  mod.rs  style.rs
