[package]
edition = "2024"
name = "baro-rs"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "baro-rs"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
rtt-target = "0.6.2"
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell = "2.1.1"
embedded-hal = "1.0.0"
mipidsi = "0.9.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
axp2101 = { git = "https://github.com/trevorflahardy/axp2101-embedded", features = [
  "async",
] }
aw9523-embedded = { git = "https://github.com/trevorflahardy/aw9523-embedded", features = [
  "async",
] }
embedded-layout = "0.4.2"
embedded-sdmmc = "0.9.0"
heapless = "0.9.2"
embassy-sync = "0.7.2"
embedded-hal-async = "1.0.0"
ft6336u-driver = { git = "https://github.com/trevorflahardy/ft6336u-driver", features = [
  "async",
] }
sht4x = { version = "0.2.0", features = ["embedded-hal-async"] }
serde = { version = "1.0", default-features = false }
postcard = "1.1.3"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
