[workspace]
members = ["crates/baro-core", "crates/baro-firmware", "crates/baro-simulator"]
default-members = ["crates/baro-firmware"]
resolver = "3"

# The firmware crate is the default build target.
# Use `cargo build -p baro-simulator` to build the desktop simulator.
# Use `cargo test -p baro-core` to run shared logic tests on the host.

[profile.dev]
# Rust debug is too slow on ESP32.
# For debug builds always builds with some optimization.
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
