[package]
name = "baro-core"
edition = "2024"
rust-version = "1.88"
version = "0.1.0"
description = "Hardware-independent core library for the baro-rs environmental instrumentation project"

[dependencies]
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-sdmmc = "0.9.0"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
heapless = "0.9.2"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
thiserror-no-std = "2.0.2"
log = "0.4"
critical-section = "1.2.0"
embedded-layout = "0.4.2"

# Optional sensor dependencies (behind feature flags)
sht4x = { version = "0.2.0", features = [
    "embedded-hal-async",
], optional = true }
scd41-embedded = { git = "https://github.com/trevorflahardy/scd41-embedded", features = [
    "async",
], optional = true }
bh1750-embedded = { git = "https://github.com/trevorflahardy/bh1750-embedded", features = [
    "async",
], optional = true }

[features]
default = ["sensor-sht40", "sensor-scd41", "sensor-bh1750"]
sensor-sht40 = ["dep:sht4x"]
sensor-scd41 = ["dep:scd41-embedded"]
sensor-bh1750 = ["dep:bh1750-embedded"]
