[package]
name = "baro-firmware"
edition = "2024"
rust-version = "1.88"
version = "0.1.0"
description = "ESP32-S3 firmware binary for the baro-rs environmental instrumentation device"

[lib]
test = false
bench = false

[[bin]]
name = "baro-firmware"
path = "./src/bin/main.rs"
test = false
bench = false

[dependencies]
baro-core = { path = "../baro-core" }

esp-hal = { version = "~1.0", features = ["esp32s3", "unstable", "psram"] }
esp-rtos = { version = "0.2.0", features = [
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32s3",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

embassy-net = { version = "0.7.1", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
rtt-target = { version = "0.6.2", features = ["log"] }
log = "0.4"
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
embassy-futures = "0.1"
esp-radio = { version = "0.17.0", features = [
    "esp-alloc",
    "esp32s3",
    "smoltcp",
    "unstable",
    "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

critical-section = "1.2.0"
static_cell = "2.1.1"
embedded-hal = "1.0.0"
mipidsi = "0.9.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
axp2101-embedded = { git = "https://github.com/trevorflahardy/axp2101-embedded", features = [
    "async",
] }
aw9523-embedded = { git = "https://github.com/trevorflahardy/aw9523-embedded", features = [
    "async",
] }
bh1750-embedded = { git = "https://github.com/trevorflahardy/bh1750-embedded", features = [
    "async",
], optional = true }
embedded-layout = "0.4.2"
embedded-sdmmc = "0.9.0"
heapless = "0.9.2"
embassy-sync = "0.7.2"
embedded-hal-async = "1.0.0"
ft6336u-driver = { git = "https://github.com/trevorflahardy/ft6336u-driver", features = [
    "async",
] }
sht4x = { version = "0.2.0", features = [
    "embedded-hal-async",
], optional = true }
scd41-embedded = { git = "https://github.com/trevorflahardy/scd41-embedded", features = [
    "async",
], optional = true }
tca9548a-embedded = { git = "https://github.com/trevorflahardy/tca9548a-embedded", version = "0.1.0", features = [
    "async",
] }
thiserror-no-std = "2.0.2"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }

[features]
default = ["sensor-sht40", "sensor-scd41", "sensor-bh1750"]
sensor-sht40 = ["dep:sht4x", "baro-core/sensor-sht40"]
sensor-scd41 = ["dep:scd41-embedded", "baro-core/sensor-scd41"]
sensor-bh1750 = ["dep:bh1750-embedded", "baro-core/sensor-bh1750"]

[build-dependencies]
dotenvy = "0.15"
